crates/mun_codegen/src/snapshots/test__let_statement_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn main(a:int):int {\n  let b = a+1\n  b\n}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

