crates/mun_codegen/src/snapshots/test__logic_op_bool.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn and(a: bool, b: bool) -> bool {\n    a && b\n}\npub fn or(a: bool, b: bool) -> bool {\n    a || b\n}"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo addrspace(4)*]

define i1 @and(i1, i1) {
body:
  %and = and i1 %0, %1
  ret i1 %and
}

define i1 @or(i1, i1) {
body:
  %or = or i1 %0, %1
  ret i1 %or
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::bool>::name" = private unnamed_addr constant [11 x i8] c"core::bool\00"
@"type_info::<core::bool>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"x\82\81m t7\03\CB\F8k\81-;\C9\84", [11 x i8]* @"type_info::<core::bool>::name", i32 1, i8 1, i8 0 }
@global_type_table = global [1 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::bool>"]

