crates/mun_codegen/src/snapshots/test__loop_expr_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn foo() {\n    loop {}\n}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

